--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@as-pect/cli": "^6.2.4",
     "@koinos/abi-proto-gen": "1.0.0",
     "@koinos/as-gen": "1.0.0",
-    "@koinos/as-proto-gen": "1.0.0",
+    "@koinos/as-proto-gen": "npm:@roamin/as-proto-gen@1.0.0",
     "@koinos/mock-vm": "1.0.0",
     "@koinos/proto-as": "github:roaminro/koinos-proto-as#359ab1cd45915bc5af044ad451008e6267d6ad13",
     "@koinos/sdk-as-cli": "1.0.0",
